<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arduino WebSocket proxy</string>
    <string name="action_settings">Settings</string>
    <string name="arduino_label">Arduino</string>
    <string name="accessory_connected">CONNECTED</string>
    <string name="accessory_disconnected">DISCONNECTED</string>
    <string name="headerManufacturer">MANUFACTURER</string>
    <string name="headerModel">MODEL</string>
    <string name="headerDescription">DESCRIPTION</string>
    <string name="accessory_connect">Connect</string>
    <string name="websocket_label">WebSocket</string>

    <plurals name="websocket_running">
        <item quantity="one">RUNNING, 1 client</item>
        <item quantity="other">RUNNING, %d clients</item>
    </plurals>

    <string name="websocket_stopped">STOPPED</string>
    <string name="headerServer">SERVER</string>
    <string name="headerClient">CLIENT</string>
    <string name="log_to_accessory">To Arduino</string>
    <string name="log_from_accessory">To WebSocket</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_websocket">WebSocket server</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_websocket_port">Port</string>

</resources>
